nameSpace.yaml
apiVersion: v1
kind: Namespace 
metadata:
  name: prod

---
apiVersion: v1
kind: Namespace
metadata:
  name: dev
